# ffc

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml  pytest.ini
.github/workflows/: python.yml  release.yml  security-scan.yml
ci/scripts/: check-project.sh  check-versions.sh  check_runtime.sh  publish.sh  validate-schema.sh
ci/security/: scan.sh
docs/: index.md
docs/api/: runtime.md  tools.md
docs/architecture/: overview.md
docs/deployment/: docker.md
docs/examples/: basic-agent.md  custom-tools.md
docs/guides/: agent-orchestration.md  getting-started.md  installation.md  llm-integration.md
site/: 404.html  index.html
site/api/runtime/: index.html
site/api/tools/: index.html
site/architecture/overview/: index.html
site/deployment/docker/: index.html
site/examples/basic-agent/: index.html
site/examples/custom-tools/: index.html
site/guides/agent-orchestration/: index.html
site/guides/getting-started/: index.html
site/guides/installation/: index.html
site/guides/llm-integration/: index.html
site/search/: search_index.json
spec/: FFC - Design-AST-Java.md  FFC - Design-AST-Python.md  FFC - Design-AST-TypeScript.md  FFC - Design-Agentic-Framework.md  FFC - Design-DSL-Overview.md  FFC - Design-Grammar-BNF.md  FFC - Design-Parser-Java.md  FFC - Design-Parser-Python.md  FFC - Design-Parser-TypeScript.md  FFC - Design.md  FFC - Overview.md  FFC - Product Brief.md  FFCArchitecture.md
src/ffc/: __main__.py  cleanup.py
src/ffc/agent/: runner.py
src/ffc/agents/: sample_agent.py
src/ffc/core/: base_agent.py  engine.py  health.py  logging.py  orchestrator.py  parser.py  resources.py  schema.py  security.py  tasks.py  telemetry.py  tools.py  types.py
src/ffc/docker/: dev-entrypoint.sh
tests/: conftest.py  test_engine.py  test_llm.py  test_openai_provider.py  test_orchestrator.py  test_parser.py  test_runner.py  test_sample_agent.py  test_schema.py  test_tasks.py  test_tools.py  test_types.py
(+5 files in other folders)
